--- a/.github/workflows/quarto.yml
+++ b/.github/workflows/quarto.yml
@@ -8,10 +8,21 @@ on:
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Setup R
+        uses: r-lib/actions/setup-r@v2
+        with:
+          r-version: '4.4.2'  # Choisissez la version appropriée
+
+      - name: Install required R packages
+        run: |
+          R -e "install.packages('knitr')"
+          R -e "install.packages('rmarkdown')"
+      
       - name: Setup Quarto
         uses: quarto-dev/quarto-actions/setup@v2
 
